--- a/package.json
+++ b/package.json
@@ -7,11 +7,19 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.0",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-alice-carousel": "^2.1.0",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.1.25",
+    "react-redux": "^7.2.2",
+    "react-responsive-carousel": "^3.2.11",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "proxy": "http://localhost:8000",
