--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
+    "query-string": "^4.3.4",
     "react": "^17.0.1",
     "react-alice-carousel": "^2.1.0",
     "react-dom": "^17.0.1",
