--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "@tinymce/tinymce-react": "^3.9.0",
     "axios": "^0.21.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
@@ -21,6 +22,7 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
   "proxy": "http://localhost:8000",
