--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "react-alice-carousel": "^2.1.0",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.1.25",
+    "react-google-picker": "^0.1.0",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.11",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "tabletop": "^1.6.3",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
