--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "tabletop": "^1.6.2",
+    "tabletop": "^1.6.3",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
-  "proxy": "http://localhost:8000",
+  "proxy": "https://vesit-events-portal.herokuapp.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
