--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^12.6.0",
     "@tinymce/tinymce-react": "^3.9.0",
     "axios": "^0.21.0",
+    "bootstrap": "^4.6.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "query-string": "^4.3.4",
     "react": "^17.0.1",
     "react-alice-carousel": "^2.1.0",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.1.25",
     "react-google-picker": "^0.1.0",
@@ -21,6 +23,7 @@
     "react-responsive-carousel": "^3.2.11",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-spinners": "^0.11.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "tabletop": "^1.6.2",
