Manage society members page is completed

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "@tinymce/tinymce-react": "^3.9.0",
+    "animate.css": "^4.1.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.6.0",
     "jwt-decode": "^3.1.2",
@@ -19,6 +20,7 @@
     "react-dom": "^17.0.1",
     "react-google-login": "^5.1.25",
     "react-google-picker": "^0.1.0",
+    "react-notifications-component": "^3.1.0",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.11",
     "react-router-dom": "^5.2.0",
