--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "animate.css": "^4.1.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.6.0",
+    "chart.js": "^3.3.2",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
@@ -17,6 +18,7 @@
     "react": "^17.0.1",
     "react-alice-carousel": "^2.1.0",
     "react-bootstrap": "^1.6.0",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.1.25",
     "react-google-picker": "^0.1.0",
@@ -26,17 +28,22 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-spinners": "^0.11.0",
+    "react-tooltip": "^4.2.21",
+    "recharts": "^2.0.9",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "serve": "^12.0.0",
     "tabletop": "^1.6.2",
     "uuid": "^8.3.2",
+    "victory-pie": "^35.8.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve" : "serve -s build"
   },
   "eslintConfig": {
     "extends": [
